refactor: Remove unused AI generation code
The AI generation service, associated types, and UI components for step indicators and code blocks have been removed as they are no longer utilized in the current application flow. The logo display area in the HTML has also been adjusted for better responsiveness.

--- a/index.html
+++ b/index.html
@@ -42,15 +42,21 @@
         font-family: 'Playfair Display', serif;
       }
       .logo-display-area {
-        width: 320px;
-        height: 320px;
+        width: 420px; /* Aumentado de 320px */
+        height: 420px; /* Aumentado de 320px */
         display: flex;
         align-items: center;
         justify-content: center;
-        border-radius: 2rem;
+        border-radius: 2.5rem;
         background: #ffffff;
         border: 2px dashed #1A2B44;
         transition: all 0.4s ease;
+      }
+      @media (max-width: 640px) {
+        .logo-display-area {
+          width: 280px;
+          height: 280px;
+        }
       }
       .photo-upload-area {
         width: 100%;
