--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <style>
       body {
         font-family: 'Montserrat', sans-serif;
-        overflow: hidden;
+        background-color: #F8FAFC;
       }
       .font-serif {
         font-family: 'Playfair Display', serif;
@@ -50,7 +50,7 @@
         justify-content: center;
         border-radius: 2.5rem;
         background: #ffffff;
-        border: 2px dashed #e2e8f0;
+        border: 1px solid #f1f5f9;
         transition: all 0.4s cubic-bezier(0.4, 0, 0.2, 1);
         margin: 0 auto;
       }
@@ -64,6 +64,9 @@
         border: 1px solid #e2e8f0;
         transition: all 0.3s ease;
         position: relative;
+      }
+      html {
+        scroll-behavior: smooth;
       }
     </style>
     <script type="importmap">
